Added text alignment to page sections

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -81,4 +81,5 @@
 @import "page-sections/carousel-section";
 
 @import "styles/background-colours";
+@import "styles/text-alignment";
 @import "styles/font-colours";
