--- a/assets/scss/page-sections/_blog-posts-section.scss
+++ b/assets/scss/page-sections/_blog-posts-section.scss
@@ -13,6 +13,10 @@
         gap: 1rem;
 
         @include responsive('md'){
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @include responsive('lg'){
             grid-template-columns: repeat(3, 1fr);
         }
     }
@@ -56,6 +60,15 @@
             padding: 1rem;
             overflow: hidden;
             flex-grow: 1;
+        }
+
+        .blog-post__title {
+            margin-bottom: 1rem;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            font-size: 1.5rem;
         }
     }
 
