--- a/assets/scss/components/_hero-banners.scss
+++ b/assets/scss/components/_hero-banners.scss
@@ -49,6 +49,28 @@
                 background: rgba(39, 24, 24, 0.5);
                 padding: 3rem;
             }
+
+            .audio-toggle {
+                position: absolute;
+                bottom: 1.5rem;
+                right: 1.5rem;
+                background-color: transparent;
+                background-image: url('../img/graphics/sound-on.svg');
+                border: none;
+                opacity: 0.5;
+                width: 3rem;
+                height: 3rem;
+                z-index: 2;
+
+                &.is-muted {
+                    background-image: url('../img/graphics/sound-off.svg');
+                }
+
+                @include responsive('md') {
+                    width: 4rem;
+                    height: 4rem;
+                }
+            }
         }
     }
 
