--- a/assets/scss/components/_social-media.scss
+++ b/assets/scss/components/_social-media.scss
@@ -1,10 +1,12 @@
 .social-media {
     display: flex;
     flex-direction: row;
+    gap: 1rem;
 
     a {
-        margin-right: 0.5rem;
         color: inherit;
+        transform: scale(1);
+        transition: transform 0.25s;
 
         &:last-of-type {
             margin: 0;
@@ -13,6 +15,11 @@
         img {
             width: 1.5rem;
             height: 1.5rem;
+        }
+
+        &:hover {
+            transform: scale(0.8);
+            transition: transform 0.25s;
         }
     }
 }
