--- a/assets/scss/_bootscore-variables.scss
+++ b/assets/scss/_bootscore-variables.scss
@@ -12,3 +12,7 @@ $mobile-landscape: 667px;
 $tablet: 768px;
 $desktop: 992px;
 $desktop-wide: 1280px;
+
+// Fonts
+$font-family-fjalla-one: 'Fjalla One', sans-serif;
+$font-family-roboto: 'Roboto', sans-serif;
