--- a/assets/scss/_bootscore-variables.scss
+++ b/assets/scss/_bootscore-variables.scss
@@ -12,6 +12,8 @@ $mobile-landscape: 667px;
 $tablet: 768px;
 $desktop: 992px;
 $desktop-wide: 1280px;
+$tv-small: 1920px;
+$tv-4k-ultra: 3840px;
 
 // Fonts
 $font-family-fjalla-one: 'Fjalla One', sans-serif;
