--- a/assets/scss/components/_hero-banners.scss
+++ b/assets/scss/components/_hero-banners.scss
@@ -38,11 +38,7 @@
         }
 
         &--tertiary {
-            min-height: 20rem;
-
-            @include responsive('md') {
-                min-height: 50rem;
-            }
+            min-height: 80vh;
 
             .hero-banner__text{
                 width: max-content;
@@ -94,11 +90,22 @@
         height: 100%;
         object-fit: cover;
         z-index: 0;
+        display: flex;
+        justify-content: center;
+        background-color: $grey;
 
         video[poster] {
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+
+        @include responsive('tv-4k-ultra'){
+            video, video[poster] {
+                aspect-ratio: 16 / 9;
+                width: auto;
+                height: 100%;
+            }
         }
     }
 
