--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -75,6 +75,7 @@
 @import "page-sections/icon-list-section";
 @import "page-sections/image-gallery-section";
 @import "page-sections/logo-parade-section";
+@import "page-sections/page-links-section";
 @import "page-sections/team-members-section";
 @import "page-sections/testimonials-section";
 @import "page-sections/video-gallery-section";
